force-app/main/default/objects/Mortgage_Contract__c/Mortgage_Contract__c.object-meta.xml
<CustomObject>
    <label>Mortgage Contract</label>
    <nameField>
        <displayFormat>MC-{00000000}</displayFormat>
        <label>Mortgage Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mortgage Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>