force-app/main/default/objects/Mortgage_Contract__c/fields/Incoming_Mortgagee_Status__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Mortgagee_Status__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Settlement Domain</complianceGroup>
    <description>Incoming mortgagee acceptance status for settlement time acceptance status from the settlement Domain</description>
    <label>Incoming Mortgagee Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STATE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>STATE_PENDING</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>STATE_ACCEPTED</fullName>
                <label>Accepted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>