force-app/main/default/objects/Mortgage_Contract__c/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Settlement Domain</complianceGroup>
    <description>State code for where the property is located</description>
    <label>Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JURISDICTION_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>JURISDICTION_NSW</fullName>
                <label>NSW</label>
            </value>
            <value>
                <fullName>JURISDICTION_QLD</fullName>
                <label>QLD</label>
            </value>
            <value>
                <fullName>JURISDICTION_SA</fullName>
                <label>SA</label>
            </value>
            <value>
                <fullName>JURISDICTION_ACT</fullName>
                <label>ACT</label>
            </value>
            <value>
                <fullName>JURISDICTION_VIC</fullName>
                <label>VIC</label>
            </value>
            <value>
                <fullName>JURISDICTION_WA</fullName>
                <label>WA</label>
            </value>
            <value>
                <fullName>JURISDICTION_NT</fullName>
                <label>NT</label>
            </value>
            <value>
                <fullName>JURISDICTION_TAS</fullName>
                <label>TAS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>