force-app/main/default/objects/Mortgage_Contract__c/fields/Lodgement_Dealing_Number__c.field-meta.xml
<CustomField>
    <fullName>Lodgement_Dealing_Number__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Settlement Domain</complianceGroup>
    <description>Mortgage lodgement ID provided by the authority when Lodged</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the new mortgage number that is generated once the lodgement case is submitted to the Land Registry</inlineHelpText>
    <label>Lodgement Dealing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>