force-app/main/default/objects/Mortgage_Contract__c/fields/Lodgement_Status__c.field-meta.xml
<CustomField>
    <fullName>Lodgement_Status__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Settlement Domain</complianceGroup>
    <description>The overall status of this Mortgage Contract</description>
    <inlineHelpText>These are the lodgement status as per PEXA. 

In Preparation - Waiting for documents to be created

Ready - All documents are complete and have been signed.

Waiting for the scheduled settlement date and time to arrive.

Lodging/Lodged - The Workspace is locked and the land registry has accepted the lodgement case.

Complete - The land registry has completed processing your documents.</inlineHelpText>
    <label>Lodgement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STATE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>STATE_ACCEPTED</fullName>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>STATE_LODGING</fullName>
                <label>Lodging</label>
            </value>
            <value>
                <fullName>STATE_LODGED</fullName>
                <label>Lodged</label>
            </value>
            <value>
                <fullName>STATE_NEW</fullName>
                <label>New</label>
            </value>
            <value>
                <fullName>STATE_READY</fullName>
                <label>Ready</label>
            </value>
            <value>
                <fullName>STATE_COMPLETED</fullName>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>