force-app/main/default/objects/Mortgage_Contract__c/fields/Mortgage_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Contract_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Mortgage Contract id within this Settlement</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Mortgage Contract Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>