force-app/main/default/objects/Mortgage_Contract__c/fields/Overall_Acceptance_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Acceptance_Status__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Settlement Domain</complianceGroup>
    <description>Overall acceptance status of settlement date time</description>
    <inlineHelpText>Pending - Settlement date and time has not been finalised by all the relevant parties as of yet. 

Accepted - Settlement date has been finalised however can still be moved if required.</inlineHelpText>
    <label>Overall Acceptance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SETTLEMENT_TIME_STATE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>SETTLEMENT_TIME_STATE_ACCEPTED</fullName>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>SETTLEMENT_TIME_STATE_PENDING</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>SETTLEMENT_TIME_STATE_NOT_ACCEPTED</fullName>
                <label>Not Accepted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>