force-app/main/default/objects/Mortgage_Contract__c/fields/Settlement_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Date_Time__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Date Time of Settlement</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Settlement Date Time</label>
    <type>DateTime</type>
</CustomField>