force-app/main/default/objects/Mortgage_Contract__c/fields/Title_Activity__c.field-meta.xml
<CustomField>
    <fullName>Title_Activity__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Settlement Domain</complianceGroup>
    <description>Indicates if Title Activity check is positive</description>
    <formula>IF( Title_Activity_Indicator__c = TRUE, &quot;Positive&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the value shows as positive it means there is activity on the land title. This activity can be viewed in PEXA for further details. 

Before proceeding please ensure that the activity does not affect lodgement of our mortgage.</inlineHelpText>
    <label>Title Activity</label>
    <type>Text</type>
</CustomField>