force-app/main/default/objects/Mortgage_Contract__c/fields/Title_Activity_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Title_Activity_Indicator__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Indicates if Title Activity arraylist exists or not</description>
    <label>Title Activity Indicator</label>
    <type>Checkbox</type>
</CustomField>