force-app/main/default/objects/Mortgage_Contract__c/validationRules/VR01_No_Lower_Version.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_No_Lower_Version</fullName>
    <active>true</active>
    <description>Ensure incoming version is not lower than version currently in Salesforce</description>
    <errorConditionFormula>AND(NOT(ISNEW()),PRIORVALUE(Version__c) &gt; Version__c)</errorConditionFormula>
    <errorMessage>The version cannot be older than the current value</errorMessage>
</ValidationRule>